framec_tests/language_specific/cpp/v3_mir/positive/not_at_sol_transition.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                if (x) { a(); -> $B(); b(); }
            }
        }
}
